fixed menu article text vertical cut off

--- a/style.scss
+++ b/style.scss
@@ -506,7 +506,7 @@ footer {
             overflow: hidden;
             white-space: nowrap; 
             text-overflow: ellipsis;
-            transition: 0.8s;
+            margin-bottom: 10px;
             }
         }
         h3 {
